incubation/springboot-start-project/src/main/k8s/local/microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: microservice-deployment
    namespace: microservice-local
    labels:
        app: microservice-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: microservice-deployment
    template:
        metadata:
            labels:
                app: microservice-deployment
        spec:
            containers:
                -   name: microservice
                    image: springboot-start-project:latest
                    # For example, comment in for Minikube
                    imagePullPolicy: Never
                    ports:
                        -   name: micros-port
                            containerPort: 8080
